2007-08-25  Andy Wingo  <wingo@pobox.com>

	* common.mk (.c.doc): Update so that making .doc files works;
	still needs some filtering though.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* scripts/maint/upload-to-ftp.gnu.org: Actually upload the file if
	we are given a URL.

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* h2def.py: Add new options --type-re, to specify a regular
	expression to transform a type name into a gtype-id macro. See
	defs/gnome/defs/Makefile.am for a use example.

2007-05-20  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: Fix some aesthetics if a package is not going to
	be built.

	* PACKAGES (guile-gnome-platform): Add cairo to
	guile-gnome-platform.

2007-05-13  Andy Wingo  <wingo@pobox.com>

	* h2def.py (get_type_pat): In method detection, require that the
	"object" type have a trailing *. Fixes incorrect detection of e.g.
	atk_role_get_name as a method wrapper, because otherwise you can't
	tell a difference between a pointer type and a scalar.

	* h2def.py: Add a command line argument --no-methods to disable
	the code that automatically tries to detect methods. Useful for
	example when generating glib defs.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* scripts/maint/prepare-news-entry (len): Use minimal matching on
	the changelog diff so that we just return the most recent
	changelog entries.

2007-05-06  Andy Wingo  <wingo@pobox.com>

	* common.mk (PKG_PATH): Fix PKG_PATH statement, pointed out by
	Mark Flacy.

2007-05-05  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: Depend on g-wrap >= 1.9.8.

2006-12-18  Andy Wingo  <wingo@pobox.com>

	* scripts/maint/upload-to-ftp.gnu.org: Add the skeleton of a
	ftp-upload.gnu.org helper.

2006-12-17  Andy Wingo  <wingo@pobox.com>
