@@ -12,3 +12,4 @@ Makefile
 ./ltmain.sh
 ./missing
 ./dev-environ
+*.tar.gz*
